--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,10 @@
 /* место для вашего кода */
 body {
+  width: 1100px;
+  margin: 0 auto;
+  font-family: Raleway, sans-serif;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
 }
 main {
   flex: 1;
@@ -33,25 +35,31 @@ main {
 .header__links-list-item_no-bullit {
   list-style-type: none;
 }
-.header__links-list-item_no-bullit a,
-.footer__links-list-item_no-bullit a {
+.header__link_active,
+.footer__link_active {
   text-decoration: none;
 }
-.header__contacts-phone,
-.header__contacts-mail,
-.footer__contacts-phone,
-.footer__contacts-mail,
-.footer__links-list-item a,
-.header__links-list li a {
+.header__link,
+.footer__link {
+  text-underline-offset: 4px;
+  white-space: nowrap;
+}
+.contacts {
+  display: flex;
+  flex-direction: column;
+  max-width: 240px;
+  font-style: normal;
+  line-height: 24px;
+}
+
+.contacts__link {
   text-underline-offset: 4px;
   white-space: nowrap;
 }
 .header__contacts-address {
   justify-self: end;
-  max-width: 240px;
-  font-style: normal;
-  line-height: 24px;
 }
+
 
 .cover {
   position: relative;
@@ -60,8 +68,7 @@ main {
   color: #fff;
   background: url("../images/cover.jpg") no-repeat center / cover;
 }
-.cover__overlay,
-.lots__overlay {
+.overlay {
   position: absolute;
   inset: 0;
   background: rgba(0, 0, 0, 0.6);
@@ -88,7 +95,6 @@ main {
   text-align: center;
 }
 .aligned-text_right {
-  margin-right: -30px;
   text-align: right;
 }
 .aligned-text_center,
@@ -238,14 +244,8 @@ main {
   font-weight: 400;
   font-size: 18px;
 }
-.footer__contacts-address {
-  display: flex;
-  flex-direction: column;
-  max-width: 242px;
-  font-style: normal;
-  line-height: 24px;
-}
-.footer__social-list-item {
+
+.footer__social-icon {
   width: 48px;
   height: 48px;
 }
