добавил класс для обнуления letter-spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,9 @@ main {
   width: 100%;
   padding: 165px 50px 106px 50px;
 }
+.cover__title-no-spacing{
+  letter-spacing: 0;
+}
 .aligned-text {
   position: relative;
   z-index: 1;
